--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <title>Pink Главная страница</title>
   </head>
   <body>
-    <header>
-
+    <header class="page-header">
+      <a href="#" class="page-header__logo logo"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
+      <nav class="main-mav">
+        <button type="button" class="main-nav__toggle">Открыть меню</button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a href="#" class="main-nav__link">Главная</a></li>
+          <li class="main-nav__item"><a href="#" class="main-nav__link">Фотографии</a></li>
+          <li class="main-nav__item"><a href="#" class="main-nav__link">Конкурс</a></li>
+          <li class="main-nav__item"><a href="#" class="main-nav__link">Html Academy</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
 
