Разметка Секции Скачать приложение

--- a/index.html
+++ b/index.html
@@ -17,8 +17,22 @@
         </ul>
       </nav>
     </header>
-    <main>
-
+    <main class="page-main">
+      <h1 class="visually-hidden">Магазин приложений для смартфонов "Pink"</h1>
+      <section class="download-attachment">
+        <img src="" alt="Смартфон" class="download-attachment__img">
+        <div class="download-attachment__wrap">
+          <a href="#" class="download-attachment__button">Скачать приложение</a>
+          <div class="available-systems download-attachment__available-systems">
+            <ul class="available-systems__list">
+              <li class="available-systems__item">iOS</li>
+              <li class="available-systems__item">Android</li>
+              <li class="available-systems__item">Windows Phone</li>
+            </ul>
+            <p class="available-systems__desc">Доступно для iPhone, Android, Windows Phone, OS X, Windows 8</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
