Разметка Секции Наши преимущества

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Магазин приложений для смартфонов "Pink"</h1>
       <section class="download-attachment">
+        <h2 class="visually-hidden">Скачать приложение</h2>
         <img src="" alt="Смартфон" class="download-attachment__img">
         <div class="download-attachment__wrap">
           <a href="#" class="download-attachment__button">Скачать приложение</a>
@@ -32,6 +33,26 @@
             <p class="available-systems__desc">Доступно для iPhone, Android, Windows Phone, OS X, Windows 8</p>
           </div>
         </div>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Наши преимущества</h2>
+        <p class="advantages__text">Устали от серости мегаполиса?</p>
+        <p class="advantages__text">Нам есть что вам предложить!</p>
+        <ul class="advantages__list"
+          <li class="advantages__item">
+            <b>Поднимает настроение</b>
+            Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!
+          </li>
+          <li class="advantages__item">
+            <b>Меняет мир вокруг</b>
+            Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект.
+          </li>
+          <li class="advantages__item">
+            <b>Заводит новых друзей</b>
+            Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых.
+          </li>
+        </ul>
+        <img src="" alt="Всем привет" class="advantages__img">
       </section>
     </main>
   </body>
