Разметил секцию Отзывы

--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
         </ul>
         <img src="" alt="Всем привет" class="advantages__img">
       </section>
+      <section>
+        <article class="reviews">
+          <ul class="reviews__list slider">
+            <li class="reviews__item slider__item">
+              <b class="author">Николай Петров</b>
+              <blockquote class="reviews__text slider__text">
+                &laquo; Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии! &raquo;
+              </blockquote>
+            </li>
+          </ul>
+          <ul class="slider__control">
+            <li class="slider__item slider__active"><button type="button" class="slider__toggle"></button></li>
+            <li class="slider__item slider__active"><button type="button" class="slider__toggle"></button></li>
+            <li class="slider__item slider__active"><button type="button" class="slider__toggle"></button></li>
+          </ul>
+        </article>
+      </section>
     </main>
   </body>
 </html>
