--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             </li>
           </ul>
           <ul class="slider__control">
-            <li class="slider__item slider__active"><button type="button" class="slider__toggle"></button></li>
-            <li class="slider__item slider__active"><button type="button" class="slider__toggle"></button></li>
-            <li class="slider__item slider__active"><button type="button" class="slider__toggle"></button></li>
+            <li class="slider__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
+            <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
+            <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
           </ul>
         </article>
       </section>
