Разметил секцию в секцию Прайс

--- a/index.html
+++ b/index.html
@@ -54,22 +54,46 @@
         </ul>
         <img src="" alt="Всем привет" class="advantages__img">
       </section>
-      <section>
-        <article class="reviews">
-          <ul class="reviews__list slider">
-            <li class="reviews__item slider__item">
-              <b class="author">Николай Петров</b>
-              <blockquote class="reviews__text slider__text">
-                &laquo; Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии! &raquo;
-              </blockquote>
-            </li>
-          </ul>
-          <ul class="slider__control">
-            <li class="slider__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
-            <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
-            <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
-          </ul>
-        </article>
+      <article class="reviews">
+        <ul class="reviews__list slider">
+          <li class="reviews__item slider__item">
+            <b class="author">Николай Петров</b>
+            <blockquote class="reviews__text slider__text">
+              &laquo; Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии! &raquo;
+            </blockquote>
+          </li>
+        </ul>
+        <ul class="slider__control">
+          <li class="slider__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
+          <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
+          <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
+        </ul>
+      </article>
+      <section class="price">
+        <ul class="price__list slider">
+          <li class="price__item slider__item">
+            <p class="price__package">Стандарт <br>3,99 USD </p>
+            <table class="price__table table">
+              <tr>
+                <td class="table__name">Розовый фильтр</td>
+                <td class="table__active"></td>
+              </tr>
+              <tr>
+                <td class="table__name">Смайлики</td>
+                <td class="table__active"></td>
+              </tr>
+              <tr>
+                <td class="table__name">Комментарии</td>
+                <td class="table__noactive"></td>
+              </tr>
+            </table>
+          </li>
+        </ul>
+        <ul class="slider__control">
+          <li class="slider__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
+          <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
+          <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
+        </ul>
       </section>
     </main>
   </body>
