Добавил заголовок в секцию отзывы

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <img src="" alt="Всем привет" class="advantages__img">
       </section>
       <article class="reviews">
+        <h2 class="visually-hidden">Отзывы</h2>
         <ul class="reviews__list slider">
           <li class="reviews__item slider__item">
             <b class="author">Николай Петров</b>
@@ -70,6 +71,7 @@
         </ul>
       </article>
       <section class="price">
+        <h2 class="visually-hidden">Наш прайс-лист</h2>
         <ul class="price__list slider">
           <li class="price__item slider__item">
             <p class="price__package">Стандарт <br>3,99 USD </p>
