--- a/index.html
+++ b/index.html
@@ -98,5 +98,24 @@
         </ul>
       </section>
     </main>
+    <section class="contacts">
+      <p class="contacts__text">Остались вопросы? Свяжитесь с нами!</p>
+      <div class="contacts_wrap">
+        <p class="contacts__item">
+          <b>Звоните:</b>
+          +7(812)555-66-66
+        </p>
+        <p class="contacts__item">
+          <b>Пишите:</b>
+          <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p class="contacts__item">
+          <b>Приезжайте в гости:</b>
+          ул. Большая Конюшенная, 19/8
+        </p>
+      </div>
+      <img src="" alt="ул. Большая Конюшенная, 19/8">
+    </section>
+    
   </body>
 </html>
