--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a href="#" class="page-header__logo logo"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
+      <a href="#" class="page-header__logo logo-mobile"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
       <nav class="main-mav">
         <button type="button" class="main-nav__toggle">Открыть меню</button>
         <ul class="main-nav__list">
@@ -116,6 +116,17 @@
       </div>
       <img src="" alt="ул. Большая Конюшенная, 19/8">
     </section>
-    
+    <footer class="page-footer">
+      <img src="" alt="Логотип Pink" class="page-footer__logo logo">
+      <ul class="page-footer__list social__list">
+        <li class="social__item"><a href="#" class="social__link">Twitter</a></li>
+        <li class="social__item"><a href="#" class="social__link">Facebook</a></li>
+        <li class="social__item"><a href="#" class="social__link">Youtube</a></li>
+      </ul>
+      <p class="page-footer__developed developed">
+        Разработано
+        <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+      </p>
+    </footer>
   </body>
 </html>
