--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <a href="#" class="page-header__logo logo-mobile"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
       <nav class="main-mav">
         <button type="button" class="main-nav__toggle">Открыть меню</button>
+        <button type="button" class="main-nav__close">Закрыть меню</button>
         <ul class="main-nav__list">
           <li class="main-nav__item"><a href="#" class="main-nav__link">Главная</a></li>
           <li class="main-nav__item"><a href="#" class="main-nav__link">Фотографии</a></li>
