--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="main-nav__list">
           <li class="main-nav__item"><a href="#" class="main-nav__link">Главная</a></li>
           <li class="main-nav__item"><a href="#" class="main-nav__link">Фотографии</a></li>
-          <li class="main-nav__item"><a href="#" class="main-nav__link">Конкурс</a></li>
+          <li class="main-nav__item"><a href="form.html" class="main-nav__link">Конкурс</a></li>
           <li class="main-nav__item"><a href="#" class="main-nav__link">Html Academy</a></li>
         </ul>
       </nav>
