Разметил первую группу формы

--- a/form.html
+++ b/form.html
@@ -28,7 +28,20 @@
         <p class="journey__text">
           Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!
         </p>
-        
+        <form class="journey-form " action="https://echo.htmlacademy.ru" method="post">
+          <p class="journey-form__wrap">
+            <label class="journey-form__label" for="surname">Фамилия</label>
+            <input class="journey-form__input" type="text" value="" id="surname">
+          </p>
+          <p class="journey-form__wrap">
+            <label class="journey-form__label" for="name">Имя</label>
+            <input class="journey-form__input" type="text" value="" id="name">
+          </p>
+          <p class="journey-form__wrap">
+            <label class="journey-form__label" for="patronymic">Отчество</label>
+            <input class="journey-form__input" type="text" value="" id="patronymic">
+          </p>
+        </form>
       </section>
     </main>
 
