--- a/form.html
+++ b/form.html
@@ -41,6 +41,12 @@
             <label class="journey-form__label" for="patronymic">Отчество</label>
             <input class="journey-form__input" type="text" value="" id="patronymic">
           </p>
+
+          <fieldset class="journey-form__group">
+            <legend class="journey-form__label">Ваши безбашенные достижения в путешествии</legend>
+            <input class="journey-form__checkbox" type="checkbox"  value="">Сделал селфи с акулой
+            <input class="journey-form__checkbox" type="checkbox"  value="">Обгорел на пляже
+          </fieldset>
         </form>
       </section>
     </main>
