Закончил разметку второй группы формы

--- a/form.html
+++ b/form.html
@@ -46,6 +46,10 @@
             <legend class="journey-form__label">Ваши безбашенные достижения в путешествии</legend>
             <input class="journey-form__checkbox" type="checkbox"  value="">Сделал селфи с акулой
             <input class="journey-form__checkbox" type="checkbox"  value="">Обгорел на пляже
+            <input class="journey-form__checkbox" type="checkbox"  value="">Видел Чака Норриса
+            <input class="journey-form__checkbox" type="checkbox"  value="">Накупил сувениров
+            <input class="journey-form__checkbox" type="checkbox"  value="">Удержал башню
+            <input class="journey-form__checkbox" type="checkbox"  value="">Разгромил отель
           </fieldset>
         </form>
       </section>
