Добавил атрибут checked 2-й группе формы Закрыл тег fieldset

--- a/form.html
+++ b/form.html
@@ -44,16 +44,19 @@
               <label class="journey-form__label" for="patronymic">Отчество</label>
               <input class="journey-form__input" type="text" value="" id="patronymic" placeholder="Ну и отчество тоже">
             </p>
+          </fieldset>
 
           <fieldset class="journey-form__group">
             <legend class="journey-form__label">Ваши безбашенные достижения в путешествии</legend>
-            <input class="journey-form__checkbox" type="checkbox"  value="">Сделал селфи с акулой
-            <input class="journey-form__checkbox" type="checkbox"  value="">Обгорел на пляже
+            <input class="journey-form__checkbox" type="checkbox"  value="" checked>Сделал селфи с акулой
+            <input class="journey-form__checkbox" type="checkbox"  value="" checked>Обгорел на пляже
             <input class="journey-form__checkbox" type="checkbox"  value="">Видел Чака Норриса
             <input class="journey-form__checkbox" type="checkbox"  value="">Накупил сувениров
-            <input class="journey-form__checkbox" type="checkbox"  value="">Удержал башню
+            <input class="journey-form__checkbox" type="checkbox"  value="" checked>Удержал башню
             <input class="journey-form__checkbox" type="checkbox"  value="">Разгромил отель
           </fieldset>
+
+
         </form>
       </section>
     </main>
