Закончил разметку группы формы контактная информация

--- a/form.html
+++ b/form.html
@@ -56,7 +56,17 @@
             <input class="journey-form__checkbox" type="checkbox"  value="">Разгромил отель
           </fieldset>
 
-
+          <fieldset class="journey-form__group">
+            <legend class="journey-form__label visually-hidden">Контактная информация</legend>
+            <p class="journey-form__wrap">
+              <label for="phone" class="journey-form__label">Номер телефона</label>
+              <input class="journey-form__input" type="text"  value="" id="phone">
+            </p>
+            <p class="journey-form__wrap">
+              <label for="email" class="journey-form__label">Адрес почты</label>
+              <input class="journey-form__input" type="email"  value="" id="email">
+            </p>
+          </fieldset>
         </form>
       </section>
     </main>
