Изменил классы формы

--- a/form.html
+++ b/form.html
@@ -28,43 +28,43 @@
         <p class="journey__text">
           Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!
         </p>
-        <form class="journey-form " action="https://echo.htmlacademy.ru" method="post">
+        <form class="journey__form form" action="https://echo.htmlacademy.ru" method="post">
 
-          <fieldset class="journey-form__group">
-            <legend class="journey-form__label visually-hidden">Личные данные</legend>
-            <p class="journey-form__wrap">
-              <label class="journey-form__label" for="surname">Фамилия</label>
-              <input class="journey-form__input" type="text" value="" id="surname" placeholder="Укажите фамилию*">
+          <fieldset class="form__group">
+            <legend class="form__label visually-hidden">Личные данные</legend>
+            <p class="form__wrap">
+              <label class="form__label" for="surname">Фамилия</label>
+              <input class="form__input" type="text" value="" id="surname" placeholder="Укажите фамилию*">
             </p>
-            <p class="journey-form__wrap">
-              <label class="journey-form__label" for="name">Имя</label>
-              <input class="journey-form__input" type="text" value="" id="name" placeholder="Введите ваше имя*">
+            <p class="form__wrap">
+              <label class="form__label" for="name">Имя</label>
+              <input class="form__input" type="text" value="" id="name" placeholder="Введите ваше имя*">
             </p>
-            <p class="journey-form__wrap">
-              <label class="journey-form__label" for="patronymic">Отчество</label>
-              <input class="journey-form__input" type="text" value="" id="patronymic" placeholder="Ну и отчество тоже">
+            <p class="form__wrap">
+              <label class="form__label" for="patronymic">Отчество</label>
+              <input class="form__input" type="text" value="" id="patronymic" placeholder="Ну и отчество тоже">
             </p>
           </fieldset>
 
-          <fieldset class="journey-form__group">
-            <legend class="journey-form__label">Ваши безбашенные достижения в путешествии</legend>
-            <input class="journey-form__checkbox" type="checkbox"  value="" checked>Сделал селфи с акулой
-            <input class="journey-form__checkbox" type="checkbox"  value="" checked>Обгорел на пляже
-            <input class="journey-form__checkbox" type="checkbox"  value="">Видел Чака Норриса
-            <input class="journey-form__checkbox" type="checkbox"  value="">Накупил сувениров
-            <input class="journey-form__checkbox" type="checkbox"  value="" checked>Удержал башню
-            <input class="journey-form__checkbox" type="checkbox"  value="">Разгромил отель
+          <fieldset class="form__group">
+            <legend class="form__label">Ваши безбашенные достижения в путешествии</legend>
+            <input class="form__checkbox" type="checkbox"  value="" checked>Сделал селфи с акулой
+            <input class="form__checkbox" type="checkbox"  value="" checked>Обгорел на пляже
+            <input class="form__checkbox" type="checkbox"  value="">Видел Чака Норриса
+            <input class="form__checkbox" type="checkbox"  value="">Накупил сувениров
+            <input class="form__checkbox" type="checkbox"  value="" checked>Удержал башню
+            <input class="form__checkbox" type="checkbox"  value="">Разгромил отель
           </fieldset>
 
-          <fieldset class="journey-form__group">
-            <legend class="journey-form__label visually-hidden">Контактная информация</legend>
-            <p class="journey-form__wrap">
-              <label for="phone" class="journey-form__label">Номер телефона</label>
-              <input class="journey-form__input" type="text"  value="" id="phone">
+          <fieldset class="form__group">
+            <legend class="form__label visually-hidden">Контактная информация</legend>
+            <p class="form__wrap">
+              <label for="phone" class="form__label">Номер телефона</label>
+              <input class="form__input" type="text"  value="" id="phone">
             </p>
-            <p class="journey-form__wrap">
-              <label for="email" class="journey-form__label">Адрес почты</label>
-              <input class="journey-form__input" type="email"  value="" id="email">
+            <p class="form__wrap">
+              <label for="email" class="form__label">Адрес почты</label>
+              <input class="form__input" type="email"  value="" id="email">
             </p>
           </fieldset>
         </form>
