--- a/form.html
+++ b/form.html
@@ -67,6 +67,13 @@
               <input class="form__input" type="email"  value="" id="email">
             </p>
           </fieldset>
+
+          <fieldset class="form__group">
+            <legend class="form__label">Скаким приложением путешествовали?</legend>
+            <input class="form__radio" type="radio"  value="" checked>Pink для iOs
+            <input class="form__radio" type="radio"  value="">Pink для Android
+            <input class="form__radio" type="radio"  value="">Windows Phone
+          </fieldset>
         </form>
       </section>
     </main>
