--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button type="button" class="main-nav__toggle">Открыть меню</button>
         <button type="button" class="main-nav__close">Закрыть меню</button>
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="#" class="main-nav__link">Главная</a></li>
+          <li class="main-nav__item"><span class="main-nav__link">Главная</span></li>
           <li class="main-nav__item"><a href="#" class="main-nav__link">Фотографии</a></li>
           <li class="main-nav__item"><a href="form.html" class="main-nav__link">Конкурс</a></li>
           <li class="main-nav__item"><a href="#" class="main-nav__link">Html Academy</a></li>
