--- a/form.html
+++ b/form.html
@@ -87,6 +87,7 @@
           </p>
         </form>
       </section>
+
     </main>
 
     <footer class="page-footer">
@@ -101,6 +102,18 @@
         <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
       </p>
     </footer>
+
+    <div class="message__failure message">
+      <b class="message__title">Что-то пошло не так!</b>
+      <p class="message__text">Прверьте поля выделенные красным, скорее всего вы забыли их заполнить</p>
+      <button type="button" name="button" class="form__button">Ок</button>
+    </div>
+
+    <div class="message__send message">
+      <b class="message__title">Ваша заявка отправлена</b>
+      <p class="message__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+      <button type="button" name="button" class="form__button">Закрыть окно</button>
+    </div>
 
   </body>
 </html>
