--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <button type="button" class="main-nav__close">Закрыть меню</button>
         <ul class="main-nav__list">
           <li class="main-nav__item"><span class="main-nav__link">Главная</span></li>
-          <li class="main-nav__item"><a href="#" class="main-nav__link">Фотографии</a></li>
+          <li class="main-nav__item"><a href="photo.html" class="main-nav__link">Фотографии</a></li>
           <li class="main-nav__item"><a href="form.html" class="main-nav__link">Конкурс</a></li>
-          <li class="main-nav__item"><a href="#" class="main-nav__link">Html Academy</a></li>
+          <li class="main-nav__item"><a href="https://htmlacademy.ru/" class="main-nav__link">Html Academy</a></li>
         </ul>
       </nav>
     </header>
@@ -138,6 +138,6 @@
         <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
       </p>
     </footer>
-    
+
   </body>
 </html>
