--- a/form.html
+++ b/form.html
@@ -13,9 +13,9 @@
         <button type="button" class="main-nav__close">Закрыть меню</button>
         <ul class="main-nav__list">
           <li class="main-nav__item"><a href="index.html" class="main-nav__link">Главная</a></li>
-          <li class="main-nav__item"><a href="#" class="main-nav__link">Фотографии</a></li>
+          <li class="main-nav__item"><a href="photo.html" class="main-nav__link">Фотографии</a></li>
           <li class="main-nav__item"><span class="main-nav__link">Конкурс</span></li>
-          <li class="main-nav__item"><a href="#" class="main-nav__link">Html Academy</a></li>
+          <li class="main-nav__item"><a href="https://htmlacademy.ru/" class="main-nav__link">Html Academy</a></li>
         </ul>
       </nav>
     </header>
