Разметил секцию с фотографиями пользователей

--- a/form.html
+++ b/form.html
@@ -34,15 +34,15 @@
             <legend class="form__label visually-hidden">Личные данные</legend>
             <p class="form__wrap">
               <label class="form__label" for="surname">Фамилия</label>
-              <input class="form__input" type="text" value="" id="surname" placeholder="Укажите фамилию*">
+              <input class="form__input" type="text" name="surrname" value="" id="surname" placeholder="Укажите фамилию*">
             </p>
             <p class="form__wrap">
               <label class="form__label" for="name">Имя</label>
-              <input class="form__input" type="text" value="" id="name" placeholder="Введите ваше имя*">
+              <input class="form__input" type="text" name="name" value="" id="name" placeholder="Введите ваше имя*">
             </p>
             <p class="form__wrap">
               <label class="form__label" for="patronymic">Отчество</label>
-              <input class="form__input" type="text" value="" id="patronymic" placeholder="Ну и отчество тоже">
+              <input class="form__input" type="text" name="patronymic" value="" id="patronymic" placeholder="Ну и отчество тоже">
             </p>
           </fieldset>
 
@@ -60,11 +60,11 @@
             <legend class="form__label visually-hidden">Контактная информация</legend>
             <p class="form__wrap">
               <label for="phone" class="form__label">Номер телефона</label>
-              <input class="form__input" type="tel"  value="" id="phone" placeholder="Номер, пожалуйста">
+              <input class="form__input" type="tel" name="phone-number" value="" id="phone" placeholder="Номер, пожалуйста">
             </p>
             <p class="form__wrap">
               <label for="email" class="form__label">Адрес почты</label>
-              <input class="form__input" type="email"  value="" id="email" placeholder="Введите почту*">
+              <input class="form__input" type="email" name="email" value="" id="email" placeholder="Введите почту*">
             </p>
           </fieldset>
 
@@ -80,7 +80,7 @@
             <textarea name="emotions" rows="8" cols="80" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
 
-          <button type="submit" name="button" class="form__button">Отправить форму</button>
+          <button type="submit" class="form__button">Отправить форму</button>
 
           <p class="form__necessarily">
             <span>*</span>-Обязательные поля
