--- a/photo.html
+++ b/photo.html
@@ -20,5 +20,90 @@
       </nav>
     </header>
 
+    <main class="page-main">
+      <h1 class="visually-hidden">Фотографии пользователей</h1>
+
+      <section class="photo">
+        <h2 class="photo__title">Фотографии пользователей</h2>
+        <p class="photo__text">
+          Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?
+        </p>
+        <div class="photo__wrap">
+          <figure class="box">
+            <img src="" alt="Панорама дня" class="box__img">
+            <figcaption class="box__description">
+              <b class="author">Анна</b>
+              <span class="time">(5 минут назад)</span>
+              <p class="box__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+              <button class="like-button" type="button" name="button">Лайк</button>
+              <span class="like">Нравится:<span class="like__number">215</span></span>
+            </figcaption>
+          </figure>
+          <figure class="box">
+            <img src="" alt="Летчик" class="box__img">
+            <figcaption class="box__description">
+              <b class="author">Левон</b>
+              <span class="time">(5 часов назад)</span>
+              <p class="box__text">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+              <button class="like-button" type="button" name="button">Лайк</button>
+              <span class="like">Нравится:<span class="like__number">356</span></span>
+            </figcaption>
+          </figure>
+          <figure class="box">
+            <img src="" alt="Барабаны" class="box__img">
+            <figcaption class="box__description">
+              <b class="author">Антон</b>
+              <span class="time">(12 часов назад)</span>
+              <p class="box__text">Соседи будут рады!</p>
+              <button class="like-button" type="button" name="button">Лайк</button>
+              <span class="like">Нравится:<span class="like__number">666</span></span>
+            </figcaption>
+          </figure>
+          <figure class="box">
+            <img src="" alt="Небо" class="box__img">
+            <figcaption class="box__description">
+              <b class="author">Борис</b>
+              <span class="time">(20 часов назад)</span>
+              <p class="box__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
+              <button class="like-button" type="button" name="button">Лайк</button>
+              <span class="like">Нравится:<span class="like__number">215</span></span>
+            </figcaption>
+          </figure>
+          <figure class="box">
+            <img src="" alt="Кубань" class="box__img">
+            <figcaption class="box__description">
+              <b class="author">Сергей</b>
+              <span class="time">(25 часов назад)</span>
+              <p class="box__text">Самая кубанская в мире!</p>
+              <button class="like-button" type="button" name="button">Лайк</button>
+              <span class="like">Нравится:<span class="like__number">4</span></span>
+            </figcaption>
+          </figure>
+          <figure class="box">
+            <img src="" alt="Где снег" class="box__img">
+            <figcaption class="box__description">
+              <b class="author">Максим</b>
+              <span class="time">(40 часов назад)</span>
+              <p class="box__text">Где снег-то?</p>
+              <button class="like-button" type="button" name="button">Лайк</button>
+              <span class="like">Нравится:<span class="like__number">150</span></span>
+            </figcaption>
+          </figure>
+          <figure class="box">
+            <img src="" alt="Крыло самолёта" class="box__img">
+            <figcaption class="box__description">
+              <b class="author">Надежда</b>
+              <span class="time">(45 часов назад)</span>
+              <p class="box__text">Всем GM и взаимные лайки!</p>
+              <button class="like-button" type="button" name="button">Лайк</button>
+              <span class="like">Нравится:<span class="like__number">2560</span></span>
+            </figcaption>
+          </figure>
+        </div>
+
+      </section>
+
+    </main>
+
   </body>
 </html>
