Разметил секцию Загрузка фото

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2 class="visually-hidden">Скачать приложение</h2>
         <img src="" alt="Смартфон" class="download-attachment__img">
         <div class="download-attachment__wrap">
-          <a href="#" class="download-attachment__button">Скачать приложение</a>
+          <a href="#" class="download-attachment__button button">Скачать приложение</a>
           <div class="available-systems download-attachment__available-systems">
             <ul class="available-systems__list">
               <li class="available-systems__item">iOS</li>
