--- a/photo.html
+++ b/photo.html
@@ -103,6 +103,23 @@
 
       </section>
 
+      <section class="photo-download">
+        <p class="download__text">
+          Затмите их всех! Выкладывайте все, что накопилось в телефоне!
+        </p>
+        <img class="download__img" src="" alt="Фото">
+        <div class="download__editor">
+          <button type="button" class="editor__button"><img class="crop" src="" alt="Обрезка"></button>
+          <button type="button" class="editor__button" disabled><img class="fill" src="" alt="Заливка"></button>
+          <button type="button" class="editor__button" disabled><img class="contrast" src="" alt="Контраст"></button>
+          <input type="range" name="level" value="" min="0" max="100">
+        </div>
+        <div class="download__buttons">
+          <button class="download__button button" type="button" name="download">Запостить</button>
+          <button class="download__button button" type="button" name="download" disabled>Отмена</button>
+        </div>
+      </section>
+
     </main>
 
   </body>
