--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <a href="#" class="page-header__logo logo-mobile"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
+      <a href="index.html" class="page-header__logo logo-mobile"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
       <nav class="main-mav">
         <button type="button" class="main-nav__toggle">Открыть меню</button>
         <button type="button" class="main-nav__close">Закрыть меню</button>
