--- a/photo.html
+++ b/photo.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <a href="#" class="page-header__logo logo-mobile"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
+      <a href="index.html" class="page-header__logo logo-mobile"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
       <nav class="main-mav">
         <button type="button" class="main-nav__toggle">Открыть меню</button>
         <button type="button" class="main-nav__close">Закрыть меню</button>
@@ -109,14 +109,14 @@
         </p>
         <img class="download__img" src="" alt="Фото">
         <div class="download__editor">
-          <button type="button" class="editor__button"><img class="crop" src="" alt="Обрезка"></button>
-          <button type="button" class="editor__button" disabled><img class="fill" src="" alt="Заливка"></button>
-          <button type="button" class="editor__button" disabled><img class="contrast" src="" alt="Контраст"></button>
+          <button type="button" class="editor__button editor__button--active"><img class="crop" src="" alt="Обрезка"></button>
+          <button type="button" class="editor__button"><img class="fill" src="" alt="Заливка"></button>
+          <button type="button" class="editor__button"><img class="contrast" src="" alt="Контраст"></button>
           <input type="range" name="level" value="" min="0" max="100">
         </div>
         <div class="download__buttons">
-          <button class="download__button button" type="button" name="download">Запостить</button>
-          <button class="download__button button" type="button" name="download" disabled>Отмена</button>
+          <button class="download__button download__button--post button" type="button" name="download">Запостить</button>
+          <button class="download__button download__button--cansel button" type="button" name="download">Отмена</button>
         </div>
       </section>
 
