--- a/photo.html
+++ b/photo.html
@@ -122,5 +122,18 @@
 
     </main>
 
+    <footer class="page-footer">
+      <img src="" alt="Логотип Pink" class="page-footer__logo logo">
+      <ul class="page-footer__list social__list">
+        <li class="social__item"><a href="#" class="social__link">Twitter</a></li>
+        <li class="social__item"><a href="#" class="social__link">Facebook</a></li>
+        <li class="social__item"><a href="#" class="social__link">Youtube</a></li>
+      </ul>
+      <p class="page-footer__developed developed">
+        Разработано
+        <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+      </p>
+    </footer>
+
   </body>
 </html>
