--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Pink Главная страница</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
     <header class="page-header">
-      <a href="#" class="page-header__logo logo-mobile"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
-      <nav class="main-mav">
+      <a href="#" class="page-header__logo logo-mobile"><img src="img/logo-mobile.svg" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
+      <nav class="main-nav">
         <button type="button" class="main-nav__toggle">Открыть меню</button>
         <button type="button" class="main-nav__close">Закрыть меню</button>
         <ul class="main-nav__list">
