Загрузил шрифты Задал базовые стили для body оформил блок page-header

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Pink Главная страница</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
     <header class="page-header">
-      <a href="#" class="page-header__logo logo-mobile"><img src="img/logo-mobile.svg" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
+      <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75px" height="25px"></a>
+      <button type="button" class="page-header__button"><span class="visually-hidden">Открыть меню</span></button>
       <nav class="main-nav">
-        <button type="button" class="main-nav__toggle">Открыть меню</button>
         <button type="button" class="main-nav__close">Закрыть меню</button>
         <ul class="main-nav__list">
           <li class="main-nav__item"><span class="main-nav__link">Главная</span></li>
@@ -22,7 +23,7 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Магазин приложений для смартфонов "Pink"</h1>
+      <h1 class="visually-hidden"><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">Магазин приложений для смартфонов "Pink"</h1>
 
       <section class="download-attachment">
         <h2 class="visually-hidden">Скачать приложение</h2>
