--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75px" height="25px"></a>
       <button type="button" class="page-header__button"><span class="visually-hidden">Открыть меню</span></button>
       <nav class="main-nav">
-        <button type="button" class="main-nav__close">Закрыть меню</button>
+        <div class="main-nav__wrap">
+          <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75px" height="25px"></a>
+          <button type="button" class="button__close"><span class="visually-hidden">Закрыть меню</span></button>
+        </div>
         <ul class="main-nav__list">
           <li class="main-nav__item"><span class="main-nav__link">Главная</span></li>
           <li class="main-nav__item"><a href="photo.html" class="main-nav__link">Фотографии</a></li>
