--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
 
     <header class="page-header">
-      <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75px" height="25px"></a>
-      <button type="button" class="page-header__button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="page-header__wrap">
+        <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75px" height="25px"></a>
+        <button type="button" class="page-header__button"><span class="visually-hidden">Открыть меню</span></button>
+      </div>
       <nav class="main-nav">
         <div class="main-nav__wrap">
           <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75px" height="25px"></a>
@@ -30,16 +32,16 @@
 
       <section class="download-attachment">
         <h2 class="visually-hidden">Скачать приложение</h2>
-        <img src="" alt="Смартфон" class="download-attachment__img">
+        <img src="img/smart.jpg" width="320px" height="490px" alt="Смартфон" class="download-attachment__img">
         <div class="download-attachment__wrap">
           <a href="#" class="download-attachment__button button">Скачать приложение</a>
           <div class="available-systems download-attachment__available-systems">
             <ul class="available-systems__list">
-              <li class="available-systems__item">iOS</li>
-              <li class="available-systems__item">Android</li>
-              <li class="available-systems__item">Windows Phone</li>
+              <li class="available-systems__item"><span class="visually-hidden">iOS</span></li>
+              <li class="available-systems__item"><span class="visually-hidden">Android</span></li>
+              <li class="available-systems__item"><span class="visually-hidden">Windows Phone</span></li>
             </ul>
-            <p class="available-systems__desc">Доступно для iPhone, Android, Windows Phone, OS X, Windows 8</p>
+            <p class="available-systems__desc">Доступно для iPhone, iPad,  Android, Windows Phone, OS X, Windows 8</p>
           </div>
         </div>
       </section>
